# client

./: .env  alembic.ini  pyproject.toml
client/: README.md  pyproject.toml  setup.py
client/.openapi-generator/: FILES
client/docs/: DefaultApi.md  UserResponseSchema.md  UserSchema.md
client/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
client/openapi_client/api/: default_api.py
client/openapi_client/models/: __init__.py  http_validation_error.py  user_response_schema.py  user_schema.py  validation_error.py  validation_error_loc_inner.py
client/test/: test_default_api.py  test_http_validation_error.py  test_user_response_schema.py  test_user_schema.py  test_validation_error.py  test_validation_error_loc_inner.py
openapi/: openapi.json
src/apptest/: config.py  dependencies.py  main.py
src/apptest/api/v1/: router.py  schemas.py  user.py
src/apptest/domain/: delegates.py  models.py  repository.py
src/apptest/stores/: engine.py  models.py  repository.py  utils.py
src/migrations/: env.py
src/migrations/versions/: eafb4634d17d_.py
