[tool.poetry]
name = "fastapi-test2"
version = "0.1.0"
description = "Test api"
authors = ["Oriel-Barroso <o.barroso@alumno.um.edu.ar>"]
license = "MTI"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
uvicorn = "^0.30.6"
psycopg2-binary = "^2.9.9"
psycopg-binary = "^3.2.1"
psycopg = "^3.2.1"
microsoft-kiota-abstractions = "^1.3.3"
microsoft-kiota-http = "^1.3.3"
microsoft-kiota-serialization-json = "^1.3.0"
microsoft-kiota-serialization-text = "^1.0.0"
microsoft-kiota-serialization-form = "^0.1.0"
microsoft-kiota-serialization-multipart = "^0.1.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.112.0"
SQLAlchemy = "^2.0.32"
alembic = "^1.13.2"
pydantic = "^1.10.0, != 1.10.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
